--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pokepredict",
-  "private": true,
+  "homepage": "https://nicklemon11.github.io/PokePredict/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "vite deploy"
+    "predeplpy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.2.0",
